fixed mobile overflow

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@ body {
   padding: 0;
   overflow-x: hidden;
   font-family: sans-serif;
-  max-width: 100vw;
 }
 
 .section {
