--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 450px) {
   .top-nav {
     z-index: -1;
+    width: 0;
   }
 
   #title-block {
@@ -22,6 +23,7 @@
   }
 
   .portfolio-card {
+    margin: 2rem;
     width: 84vw;
     box-shadow: 1px 1px 5px 1px #022504;
   }
@@ -48,15 +50,25 @@
   }
 
   .p-wrapper {
-    width: 90vw;
   }
 
   .t-text {
     font-size: 1.5rem;
   }
 
+  #navigation {
+  }
+
   #navigation > label {
     font-size: 1rem;
-    width: 64%;
+  }
+
+  .t-pic {
+    height: 5rem;
+    width: 5rem;
+  }
+
+  #contact-button-section {
+    flex-direction: column;
   }
 }
